CJAL-08/10/2018- homologacion de mensajes de validacion y error de vistas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -8,191 +8,7 @@
 <link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-
-<script type="text/javascript">
-    $(function () {
-
-        $('#interest_tabs').on('click', 'a[data-toggle="tab"]', function (e) {
-            e.preventDefault();
-
-            var $link = $(this);
-
-            if (!$link.parent().hasClass('active')) {
-
-                //remove active class from other tab-panes
-                $('.tab-content:not(.' + $link.attr('href').replace('#', '') + ') .tab-pane').removeClass('active');
-
-                // click first submenu tab for active section
-                $('a[href="' + $link.attr('href') + '_all"][data-toggle="tab"]').click();
-
-                // activate tab-pane for active section
-                $('.tab-content.' + $link.attr('href').replace('#', '') + ' .tab-pane:first').addClass('active');
-            }
-
-
-            //tabSisCompra
-        });
-    });
-</script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#btnGuardaP").click(function () {
-
-            var form = $(this).parent("form");
-            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Roles", Action = "GuardarPermisos" }) %>');
-            form.attr('method', 'post');
-
-            //var arrItem = [];
-            //var commaSeparated = "";
-            //$("#ItemList td input[type=checkbox]").each(function (index, val) {
-            //    alert(index);
-            //    alert(val);
-            //     debugger
-            //    var checkdId = $(val).atrr("Id");
-            //    var arr = checkdId.split('_');
-            //    var currentCheckboxId = arr[1];
-            //    var IsChecked = $("#" + checkId).is(":checked", true);
-            //    if (Ischecked) {
-            //        arrItem.push(currentCheckboxId);
-            //    }
-            //    alert(arrItem.values);
-            //})
-            //if (arrItem.lenght != 0)
-            //{
-            //    $.ajax({
-            //        url: "/Roles/SaveList",
-            //        type:"POST",
-            //        data: { ItemList: commaSeparated },
-            //        success: function (response)
-            //        {
-            //        }
-            //    })
-            //}
-        });
-        $(".hideControl").hide();
-        $("#homeRequisicion").click(function () {
-            $('#MovilCompra').css("display", "none");
-            $('#SistemaCompra').css("display", "none");
-            $('#SistemaCatalogo').css("display", "none");
-            $('#window_Compra').css("display", "none");
-            $('#window_Ventas').css("display", "none");
-            $('#window_Inventario').css("display", "none");
-            $('#window_Catalogos').css("display", "none");
-            $('#hide_divCat').css("display", "none");
-            $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");
-            $('#gvwSistemaReq').css("display", "");
-            $('#MovilRequsicion').css("display", "");
-            $('#SistemaInventario').css("display", "none");
-            $('#MovilInventario').css("display", "none");
-            $('#btnCatalogo').css("display", "none");
-            $('#btnCompra').css("display", "none");
-            $('#btnMovilCompra').css("display", "mone");
-            $('#btnRrequisicion').css("display", "");
-        });
-        $("#homeCatalogos").click(function () {
-            $('#MovilCompra').css("display", "none");
-            $('#SistemaCompra').css("display", "none");
-            $('#SistemaCatalogo').css("display", "");
-            $('#SistemaInventario').css("display", "none");
-            $('#MovilInventario').css("display", "none");
-            $('#btnCatalogo').css("display", "");            
-            $('#window_Compra').css("display", "none");
-            $('#window_Ventas').css("display", "none");
-            $('#window_Inventario').css("display", "none");
-            $('#window_Catalogos').css("display", "");
-            $('#hide_divCat').css("display", "");
-            $('#tabSisCompra').css("display", "none");
-            $('#gvwSistemaReq').css("display", "none");
-            $('#catalogos_tabs').css("display", "");
-            $('#MovilCatalogo').css("display", "");
-            $('#MovilRequsicion').css("display", "none");
-            $('#SistemaVentas').css("display", "none");
-            $('#MovilVentas').css("display", "none");
-            $('#btnCompra').css("display", "none");
-            $('#btnRrequisicion').css("display", "none");
-        });
-
-        $("#homeCompra").click(function () {
-            $('#MovilCompra').css("display", "");
-            $('#SistemaCompra').css("display", "");
-            $('#divgvwCompra').css("display", "");
-            $('#DivgvwMovilCompra').css("display", "");
-            $('#tabSisCompra').css("display", "");
-            $('#SistemaCatalogo').css("display", "none");
-            $('#window_Compra').css("display", "");
-            $('#window_Ventas').css("display", "none");
-            $('#SistemaVentas').css("display", "none");
-            $('#window_Inventario').css("display", "none");
-            $('#window_Catalogos').css("display", "none");
-            $('#hide_divCat').css("display", "none");
-            $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");
-            $('#SistemaInventario').css("display", "none");
-            $('#MovilInventario').css("display", "none");
-            $('#btnCatalogo').css("display", "none");
-            $('#btnCompra').css("display", "");
-            $('#gvwSistemaReq').css("display", "none");
-            $('#MovilRequsicion').css("display", "none");
-            $('#btnMovilCompra').css("display", "");
-            $('#btnRrequisicion').css("display", "none");
-           
-        });
-
-        $("#homeInventario").click(function () {
-            $('#window_Inventario').css("display", "");
-            $('#SistemaInventario').css("display", "");
-            $('#MovilInventario').css("display", "");
-            $('#MovilCompra').css("display", "none");
-            $('#SistemaCompra').css("display", "none");
-            $('#SistemaCatalogo').css("display", "none");
-            $('#window_Compra').css("display", "none");
-            $('#window_Ventas').css("display", "none");
-            $('#SistemaVentas').css("display", "none");
-            $('#MovilVentas').css("display", "none");
-            $('#window_Catalogos').css("display", "none");
-            $('#hide_divCat').css("display", "none");
-            $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");
-            $('#tabSisCompra').css("display", "none");
-            $('#gvwSistemaReq').css("display", "none");
-            $('#MovilRequsicion').css("display", "none");
-            $('#divgvwCompra').css("display", "none");
-            $('#DivgvwMovilCompra').css("display", "none");
-            $('#btnCatalogo').css("display", "none");
-            $('#btnCompra').css("display", "none");
-            $('#btnMovilCompra').css("display", "mone");
-            $('#btnRrequisicion').css("display", "none");
-        });
-
-        $("#homeVentas").click(function () {
-            $('#window_Ventas').css("display", "");
-            $('#SistemaVentas').css("display", "");
-            $('#MovilVentas').css("display", "");
-            $('#window_Inventario').css("display", "none");
-            $('#SistemaInventario').css("display", "none");
-            $('#MovilInventario').css("display", "none");            
-            $('#MovilCompra').css("display", "none");
-            $('#SistemaCompra').css("display", "none");
-            $('#SistemaCatalogo').css("display", "none");
-            $('#window_Compra').css("display", "none");
-            $('#window_Catalogos').css("display", "none");
-            $('#hide_divCat').css("display", "none");
-            $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");
-            $('#tabSisCompra').css("display", "none");
-            $('#gvwSistemaReq').css("display", "none");
-            $('#MovilRequsicion').css("display", "none");
-            $('#divgvwCompra').css("display", "none");
-            $('#DivgvwMovilCompra').css("display", "none");
-            $('#btnCatalogo').css("display", "none");
-            $('#btnCompra').css("display", "none");
-            $('#btnMovilCompra').css("display", "mone");
-            $('#btnRrequisicion').css("display", "none");
-        });
-    });
-</script>
-
+<script src="~/Resources/js/Roles.js"></script>
 <!-- Page Loader -->
 <div class="page-loader-wrapper">
     <div class="loader">
@@ -217,7 +33,7 @@
                                             <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
                                                 @foreach (var lst in ViewBag.listaEmpresas)
                                                 {
-                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                 }
                                             </select>
                                         </div>
@@ -280,12 +96,12 @@
                         <li class="nav-item"><a class="nav-link" id="homeCatalogos" data-toggle="tab" href="#window_Catalogos"><i class="zmdi zmdi-settings-square"></i> Catalogos </a></li>
                     </ul>
                     @*<div class="row clearfix">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <input type="submit" id="btnGuardaP" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisos") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="submit" id="btnGuardaP" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisos") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                </div>
                             </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <!--Compra tab menu-->
@@ -330,8 +146,8 @@
                     </div>
                     <!--Catalogo tab content-->
                     <div class="tab-content">
-                        <div id="SistemaCatalogo" class="tab-pane">                          
-                            <div class="row clearfix" id="btnCatalogo" >
+                        <div id="SistemaCatalogo" class="tab-pane">
+                            <div class="row clearfix" id="btnCatalogo">
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <input type="submit" id="btnGuardaP" name="Guardar" title="Catalogos" value="Guardar" formaction=@Url.Action("GuardarPermisos") formmethod="post" class="btn btn-raised btn-primary float-right" />
@@ -542,31 +358,45 @@
                             </div>
                         </div>*@
                 </div>
-
-                @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                @if (ViewBag.MensajeError != null)
                 {
-                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
-                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                        <span data-notify="icon"></span>
-                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                        <a href="#" target="_blank" data-notify="url"></a>
+                    <div class="row clearfix">
+                        <div id="divMensajeError" class="container">
+                            <div class="alert alert-danger">
+                                <div class="alert-icon">
+                                    <i class="zmdi zmdi-block"></i>
+                                </div>
+                                <strong>
+                                    <label>@ViewBag.MensajeError</label>
+                                </strong>
+                            </div>
+                        </div>
                     </div>
                 }
+                @*@if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                    {
+                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                             bottom: 20px; left: 0px; right: 0px;">
+                            @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                @* <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                            <span data-notify="icon"></span>
+                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                            <a href="#" target="_blank" data-notify="url"></a>
+                        </div>
+                    }
 
-                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
-                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                        <span data-notify="icon"></span>
-                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                    </div>
-                }
+                    @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                    {
+                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                             bottom: 20px; left: 0px; right: 0px;">
+                            @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                @*  <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                            <span data-notify="icon"></span>
+                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                        </div>
+                    }*@
             </div>
         </div>
     </section>
