--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
@@ -37,7 +37,7 @@
                                             <option value="0">Seleccione..</option>
                                             @foreach (var lst in ViewBag.AllRoles)
                                             {
-                                                <option value="@lst.IdRol">@lst.NombreRol</option>
+                                            <option value="@lst.IdRol">@lst.NombreRol</option>
                                             }
                                         </select>
                                     </div>
@@ -67,15 +67,15 @@
                                     foreach (var item in @ViewBag.IdUser[0].Roles)
                                     {
 
-                                        <tr>
-                                            <th>@item.NombreRol</th>
-                                            <td>
-                                                <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
-                                                    <i class="material-icons">delete</i>
-                                                    <span class="icon-name"></span>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                <tr>
+                                    <th>@item.NombreRol</th>
+                                    <td>
+                                        <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
+                                            <i class="material-icons">delete</i>
+                                            <span class="icon-name"></span>
+                                        </a>
+                                    </td>
+                                </tr>
                                     }
                                 }
                             </tbody>
@@ -93,29 +93,44 @@
                     </div>
                 </div>
             </div>
-            @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+            @if (ViewBag.MensajeError != null)
                 {
-
-                <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                     role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                    <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                    <span data-notify="icon"></span>
-                    <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                    <a href="#" target="_blank" data-notify="url"></a>
+                <div class="row clearfix">
+                    <div id="divMensajeError" class="container">
+                        <div class="alert alert-danger">
+                            <div class="alert-icon">
+                                <i class="zmdi zmdi-block"></i>
+                            </div>
+                            <strong>
+                                <label>@ViewBag.MensajeError</label>
+                            </strong>
+                        </div>
+                    </div>
                 </div>
             }
+            @*@if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                    {
 
-            @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                     role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                    <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                    <span data-notify="icon"></span>
-                    <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                </div>
-            }
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                             bottom: 20px; left: 0px; right: 0px;">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                        <a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
+
+                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                    {
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                             bottom: 20px; left: 0px; right: 0px;">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }*@
         </div>
     </section>
 }
