--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
@@ -1,68 +1,5 @@
 ﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraPagoDTO
-<script>
-    (function ($) {
-        var defaults;
-        $.event.fix = (function (originalFix) {
-            return function (event) {
-                event = originalFix.apply(this, arguments);
-                if (event.type.indexOf('copy') === 0 || event.type.indexOf('paste') === 0) {
-                    event.clipboardData = event.originalEvent.clipboardData;
-                }
-                return event;
-            };
-        })($.event.fix);
-        defaults = {
-            callback: $.noop,
-            matchType: /image.*/
-        };
-        return $.fn.pasteImageReader = function (options) {
-            if (typeof options === "function") {
-                options = {
-                    callback: options
-                };
-            }
-            options = $.extend({}, defaults, options);
-            return this.each(function () {
-                var $this, element;
-                element = this;
-                $this = $(this);
-                return $this.bind('paste', function (event) {
-                    var clipboardData, found;
-                    found = false;
-                    clipboardData = event.clipboardData;
-                    return Array.prototype.forEach.call(clipboardData.types, function (type, i) {
-                        var file, reader;
-                        if (found) {
-                            return;
-                        }
-                        if (type.match(options.matchType) || clipboardData.items[i].type.match(options.matchType)) {
-                            file = clipboardData.items[i].getAsFile();
-                            reader = new FileReader();
-                            reader.onload = function (evt) {
-                                return options.callback.call(element, {
-                                    dataURL: evt.target.result,
-                                    event: evt,
-                                    file: file,
-                                    name: file.name
-                                });
-                            };
-                            reader.readAsDataURL(file);
-                            return found = true;
-                        }
-                    });
-                });
-            });
-        };
-    })(jQuery);
-    var loaded = function () {
-        $("html").pasteImageReader(function (results) {
-            var filename = results.filename, dataURL = results.dataURL, results;
-            $('#img').attr('src', dataURL)
-            document.getElementById('UrlPathCapturaPantalla').value = dataURL;
-        });
-    }
-    $(document).ready(loaded)
-</script>
+
 <div class="page-loader-wrapper">
     <div class="loader">
         <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
@@ -208,3 +145,4 @@
         }
     </div>
 </section>
+<script src="~/Scripts/js/ConfirmacionPagoJS.js" ></script>
