--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -152,6 +152,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/efectivo"
                 android:textSize="18sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +167,7 @@
                 android:autofillHints=""
                 android:ems="10"
                 android:inputType="numberDecimal"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
